--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,10 +4,12 @@
 {% block body %}
     
     <div>
-        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-        <div>
-            <h2 class="post-body">{{ user.username }}</h2>
-            <p class="post-body">{{ user.email }}</p>
+        <div class="flex">
+            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+            <div>
+                <h2 class="post-body">{{ user.username }}</h2>
+                <p class="post-body">{{ user.email }}</p>
+            </div>
         </div>
         <div>
             <form method="POST" enctype="multipart/form-data">
