Add default profile pic to static folder and Minor Improvements

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,5 +1,5 @@
 {% extends "blog/layout.html" %}
 
-{% block body %}
+{% block content %}
     <h1>About page!</h1>
-{% endblock body %}
+{% endblock content %}
