--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -49,7 +49,7 @@
                 </div>
             {% endfor %}
         {% endif %}
-        {% block body %}{% endblock %}
+        {% block content %}{% endblock %}
     </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
