--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,10 +1,10 @@
 {% extends "blog/layout.html" %}
 
-{% block body %}
+{% block content %}
     <h2>You have been successfuly logged out!</h2>
     <div>
         <small>
             <a href="{% url 'login' %}">Log In again</a>
         </small>
     </div>
-{% endblock body %}
+{% endblock content %}
