--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,7 +1,7 @@
 {% extends "blog/layout.html" %}
 {% load crispy_forms_tags %}
 
-{% block body %}
+{% block content %}
     <h1>signup page!</h1>
     <div>
         <form method="POST">
@@ -20,4 +20,4 @@
             </small>
         </div>
     </div>
-{% endblock body %}
+{% endblock content %}
