--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -24,7 +24,7 @@
                     {{ u_form|crispy }}
                     {{ p_form|crispy }}
                 </fieldset>
-                <div>
+                <div class="m-top">
                     <button type="submit">Update</button>
                 </div>
             </form>
