--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,7 +10,7 @@
                 <legend>Log In</legend>
                 {{ form|crispy }}
             </fieldset>
-            <div>
+            <div class="m-top">
                 <button type="submit">Login</button>
             </div>
         </form>
