--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <h1>Home page!</h1>
+    <h1>Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
     {% for post in posts %}
         <article class="flex">
             {% if post.author.profile.image %}
