--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,6 +13,9 @@
             <div class="m-top">
                 <button type="submit">Login</button>
             </div>
+            <small class="m-top">
+                <a href="{% url 'password_reset' %}">Forgot your password?</a>
+            </small>
         </form>
         <div>
             <small>
