--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -14,6 +14,7 @@
             <div>
                 <h2 class="post-body">{{ user.username }}</h2>
                 <p class="post-body">{{ user.email }}</p>
+                <a href="{% url 'password_reset' %}">Change Password</a>
             </div>
         </div>
         <div>
